added the body of the tribute

--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <link href="tribute.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <section>
+        <header>
+            <h1>ELON MUSK'S TRIBUTE</h1>
+        </header>
+    </section>
+    <section>
+        <main>
+            <img src="./images/Elon Musk.jpg" alt="elon's image" width="360" height="300">
+            <p><strong>“Failure is an option here. If things are not failing, you are not innovating enough.”</strong></p>
+            <hr>
+            <table>
+               <tr> <!--row_one-->
+                    <th>Company</th>
+                    <th>Mission</th>
+                    <th>Estimated/Predicted Value</th>
+               </tr>
+               <tr> <!--row_two-->
+                    <td>Tesla Motor's</td>
+                    <td>"...to accelerate the world's transition to a sustainable energy future."</td>
+                    <td>$61 billion</td>
+               </tr> 
+               <tr> <!--row_three-->
+                   <td>SpaceX</td>
+                   <td>"...to revolutionize space technology, with the ultimate goal of enabling people to live on other planets"</td>
+                   <td>$30.5 billion</td>
+               </tr>
+               <tr>
+                   <td>The Boring Company</td>
+                   <td>"to defeat the snail in a race" (Currently developing solutions to alleviate traffic)</td>
+                   <td>$16 billion/td>
+               </tr>
+            </table>
+            <p>Elon Musk is an inventor and an engineer. He is the owner of, among other things, Tesla Motors and SpaceX. Musk is a genius and will go down as one of the greatest engineers the world has ever seen. <br> He is pushing the boundaries of science and technology with his ambitions in electric power and space. <br>Like a true engineer, he has developed solutions for the problems of modern civilization. He has plans to solve our traffic problems with autonomous cars and tunnel networks. <br>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
+        </main>
+    </section>
+    <hr>
+    <section>
+        <footer>
+            <h3>All Right Reserved Copyright &copy; TRACEY and Ernest 2022</h3>
+        </footer>
+    </section>
 </body>
 </html>
