position for 2022 changed in footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <section>
         <footer>
-            <h3>All Right Reserved Copyright &copy; TRACEY and Ernest 2022</h3>
+            <h3>All Right Reserved Copyright &copy; 2022 Tracey and Ernest</h3>
         </footer>
     </section>
 </body>
