added css file for the first time

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elon Musk Tribute</title>
+    <script src="https://kit.fontawesome.com/e4fd9aea61.js" crossorigin="anonymous"></script>
     <link href="tribute.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -20,9 +21,9 @@
             <hr>
             <table>
                <tr> <!--row_one-->
-                    <th>Company</th>
-                    <th>Mission</th>
-                    <th>Estimated/Predicted Value</th>
+                    <th col="1">Company</th>
+                    <th col="2">Mission</th>
+                    <th col="3">Estimated/Predicted Value</th>
                </tr>
                <tr> <!--row_two-->
                     <td>Tesla Motor's</td>
