--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                    <td>$16 billion/td>
                </tr>
             </table>
-            <p>Elon Musk is an inventor and an engineer. He is the owner of, among other things, Tesla Motors and SpaceX. Musk is a genius and will go down as one of the greatest engineers the world has ever seen. <br> He is pushing the boundaries of science and technology with his ambitions in electric power and space. <br>Like a true engineer, he has developed solutions for the problems of modern civilization. He has plans to solve our traffic problems with autonomous cars and tunnel networks. <br>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
+            <p>Elon Musk is an inventor and an engineer. He is the owner of, among other things, Tesla Motors and SpaceX. Musk is a genius and will go down as one of the greatest engineers the world has ever seen.</p>
+            <p>He is pushing the boundaries of science and technology with his ambitions in electric power and space. 
+            Like a true engineer, he has developed solutions for the problems of modern civilization. He has plans to solve our traffic problems with autonomous cars and tunnel networks.</p> 
+            <p>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
         </main>
     </section>
     <hr>
