added figure tag to img tag

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <h1>ELON MUSK'S TRIBUTE</h1>
         </header>
     </section>
+
     <section>
         <main>
-            <img src="./images/Elon Musk.jpg" alt="elon's image" width="360" height="300">
+            <figure>
+                <img src="./images/Elon Musk.jpg" alt="elon's image" width="360" height="300">
+            </figure>
             <p><strong>“Failure is an option here. If things are not failing, you are not innovating enough.”</strong></p>
             <hr>
             <table>
@@ -47,11 +50,13 @@
             <p>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
         </main>
     </section>
+
     <hr>
     <section>
         <footer>
             <h3>All Right Reserved Copyright &copy; 2022 Tracey and Ernest</h3>
         </footer>
     </section>
+
 </body>
 </html>
