modified header, image

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <section>
         <main>
             <figure>
-                <img src="./images/Elon Musk.jpg" alt="elon's image" width="400" height="300">
+                <img src="./images/elonmusk.jpg" alt="elon's image" >
             </figure>
-            <p><strong>“Failure is an option here. If things are not failing, you are not innovating enough.”</strong></p>
+            <p class="quote"><strong>“Failure is an option here. If things are not failing, you are not innovating enough.”</strong></p>
             <hr>
             <table>
                <tr> <!--row_one-->
