modified table colors

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <hr>
             <table>
                <tr> <!--row_one-->
-                    <th col="1">Company</th>
-                    <th col="2">Mission</th>
-                    <th col="3">Estimated/Predicted Value</th>
+                    <th id="first_color" col="1">Company</th>
+                    <th id="sec_color"col="2">Mission</th>
+                    <th id="third_color" col="3">Estimated/Predicted Value</th>
                </tr>
                <tr> <!--row_two-->
                     <td>Tesla Motor's</td>
