fixed td tag on row four

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                <tr>
                    <td>The Boring Company</td>
                    <td>"to defeat the snail in a race" (Currently developing solutions to alleviate traffic)</td>
-                   <td>$16 billion/td>
+                   <td>$16 billion</td>
                </tr>
             </table>
             <hr>
