--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             Like a true engineer, he has developed solutions for the problems of modern civilization. He has plans to solve our traffic problems with autonomous cars and tunnel networks.</p> 
             <br>
             <p>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
+            <br>
+            <a href="https://www.britannica.com/biography/Elon-Musk" target="_blank">Learn More</a>
         </main>
     </section>
 
