added a nav bar with links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
     <section>
+        <nav id="navigation">
+            <ul>
+                <li><a href="#first_color">Company</a></li>
+                <li><a href="#sec_color">Mission</a></li>
+                <li><a href="#third_color">Value</a></li>
+              
+            </ul>
+        </nav>
+    </section>
+    <section>
         <header>
             <h1>ELON MUSK'S TRIBUTE</h1>
         </header>
@@ -52,7 +62,7 @@
             <br>
             <p>Perhaps more remarkable, he has plans to eliminate most of our fossil fuel dependence and switch to cleaner and more sustainable sources of energy.</p>
             <br>
-            <a href="https://www.britannica.com/biography/Elon-Musk" target="_blank">Learn More</a>
+            <a href="https://www.britannica.com/biography/Elon-Musk" target="_blank" id="linked">Learn More</a>
         </main>
     </section>
 
